--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Press Start 2P', cursive ;
   font-size: 1.6rem;
   font-weight: 400;
   background-color: var(--white);
@@ -155,7 +155,63 @@ img {
 .navigation.fix-nav .nav-link:hover {
   color: white;
 }
+@media (max-width: 2560px) {
+  .header {
+    min-height: 80vh;
+    
+  }
 
+  .nav-list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 100%;
+    padding-top: 3rem;
+    background-color: var(--black);
+    transition: var(--transition-2);
+    z-index: 999;
+  }
+
+  .nav-list.open {
+    left: 0;
+    width: 100%;
+  }
+
+  .logo {
+    font-size: 2rem;
+  }
+
+  .nav-item {
+    margin: 0 0 0.5rem;
+  }
+
+  .nav-item.theme-icon {
+    display: none;
+  }
+
+  .nav-link {
+    padding: 1rem 0;
+    color: var(--white);
+    font-size: 1.8rem;
+  }
+
+  .hamburger,
+  .theme,
+  .close {
+    display: block;
+  }
+
+  .close {
+    position: absolute;
+    top: 2%;
+    right: 5%;
+    color: var(--white);
+  }
+}
 @media (max-width: 768px) {
   .header {
     min-height: 80vh;
