--- a/styles.css
+++ b/styles.css
@@ -563,6 +563,7 @@ img {
 }
 
 .title h1 {
+  line-height: 50px;
   font-size: 4rem;
   color: var(--customColor);
   transition: var(--transition-2);
@@ -586,8 +587,8 @@ img {
 
 .col-1 img {
   position: absolute;
-  bottom: -21%;
-  left: 6%;
+  bottom: 21%;
+  left: -21%;
   transition: var(--transition-2);
   width: 45rem;
   z-index: 0;
@@ -600,6 +601,7 @@ img {
 .col-2 .title {
   text-align: left;
   margin-bottom: 2rem;
+  
 }
 
 .col-2 p {
@@ -642,67 +644,6 @@ img {
     width: 352px
   }
 }
-
-/* Services */
-.section .row {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  gap: 5rem;
-}
-
-.services .row .col {
-  padding: 1.5rem 1rem;
-  border-radius: 1rem;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  transition: var(--transition-2);
-  border: 3px solid transparent;
-  cursor: pointer;
-}
-
-body.dark .services .row .col {
-  border-color: var(--customColor);
-}
-
-.services .row .col .icon {
-  font-size: 6rem;
-  color: var(--customColor);
-}
-
-.services .row span {
-  font-size: 1.3rem;
-  color: var(--grey2);
-}
-
-.services .row h3 {
-  margin: 0.4rem 0 1rem;
-}
-
-.services .row p {
-  font-size: 1.5rem;
-  color: var(--grey2);
-  margin-bottom: 1rem;
-}
-
-.services .row .col:hover {
-  background-color: var(--customColor);
-}
-
-body.dark .services .row .col:hover .icon {
-  color: white;
-}
-
-.services .row .col:hover .icon,
-.services .row .col:hover p,
-.services .row .col:hover h3,
-.services .row .col:hover span {
-  transition: var(--transition-2);
-  color: white;
-}
-
-.services .row .col:hover .icon {
-  transition: var(--transition-1);
-}
-
 /* Porfolio */
 
 .portfolio .row {
@@ -894,8 +835,14 @@ section.testimonials .title {
 }
 
 /* Blog */
+.section .row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 5rem;
+}
 .blog .col .img {
   border-radius: 1rem;
+  width: 20px;
 }
 
 .blog .col h3 {
@@ -919,131 +866,7 @@ section.testimonials .title {
   transition: var(--transition-2);
 }
 
-/* Contact */
-.contact-upper {
-  margin-bottom: -2%;
-}
 
-.contact-upper svg {
-  fill: var(--customColor);
-  transition: var(--transition-2);
-}
-
-.section.contact {
-  padding: 0rem 0 5rem;
-  background-color: var(--customColor);
-  transition: var(--transition-2);
-}
-
-.section.contact .title h1 {
-  color: white;
-}
-
-.contact-center {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 5rem;
-  color: white;
-  padding: 0 3rem;
-}
-
-.form h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-
-.form input,
-.form textarea {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.6rem;
-  padding: 1rem 0;
-  text-indent: 1rem;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  color: white;
-  background-color: transparent;
-  border-right: 0.5rem;
-  margin-bottom: 1rem;
-  width: 100%;
-  outline: none;
-}
-
-.form .left div {
-  display: flex;
-}
-
-.form textarea {
-  width: 100%;
-  resize: vertical;
-  margin-bottom: 2rem;
-  height: 10rem;
-}
-
-.form .btn-form {
-  background-color: white;
-  color: var(--customColor);
-  transition: var(--transition-2);
-  font-size: 1.6rem;
-  font-weight: 500;
-  cursor: pointer;
-}
-
-.contact .right {
-  background-color: white;
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 1rem;
-}
-
-.contact .right div {
-  display: flex;
-  align-items: center;
-  color: #212121;
-}
-
-.contact .right div .content h3 {
-  font-size: 1.6rem;
-}
-
-.contact .right div .content span {
-  font-size: 1.5rem;
-}
-
-.contact .right div:not(:last-child) {
-  margin-bottom: 2rem;
-}
-
-.contact .right .icon {
-  font-size: 2.7rem;
-  color: var(--customColor);
-  margin-right: 2rem;
-  padding: 1rem 1.5rem;
-  position: relative;
-}
-
-.contact .right .icon::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: var(--customColor);
-  opacity: 0.2;
-}
-
-@media (max-width: 768px) {
-  .contact-center {
-    grid-template-columns: 1fr;
-  }
-
-  .contact-center .right {
-    text-align: left;
-  }
-}
 
 /* Footer */
 footer {
